white space wrap fixed (#496)

--- a/samples/src/Microsoft.Azure.IIoT.App/src/wwwroot/css/site.css
+++ b/samples/src/Microsoft.Azure.IIoT.App/src/wwwroot/css/site.css
@@ -130,6 +130,10 @@ th {
     white-space: normal;
 }
 
+.space-wrap:hover {
+    white-space: normal;
+}
+
 .navbar-toggler {
     background-color: rgba(255, 255, 255, 0.1);
 }
